Bug 1656753 - Track CrossGroupOpener on CanonicalBrowsingContext, r=farre

Differential Revision: https://phabricator.services.mozilla.com/D90890